Use different icons for cancel and upload error

--- a/manifest/manifest.json
+++ b/manifest/manifest.json
@@ -27,7 +27,8 @@
         "icons/PlayerStartIconSponsorBlockreativKer256px.png",
         "icons/PlayerStopIconSponsorBlockreativKer256px.png",
         "icons/PlayerUploadIconSponsorBlockreativKer256px.png",
-        "icons/PlayerUploadFailedIconSponsorBlockreativKer256px.png",
+        "icons/PlayerUploadFailedIconSponsorBlockreativKer.svg",
+        "icons/PlayerCancelSegmentIconSponsorBlockreativKer.svg",
         "icons/settings.svg",
         "icons/pencil.svg",
         "icons/checkreativK.svg",
