Use different icons for cancel and upload error

--- a/manifest/manifest.json
+++ b/manifest/manifest.json
@@ -27,7 +27,8 @@
         "icons/PlayerStartIconSponsorBlocker256px.png",
         "icons/PlayerStopIconSponsorBlocker256px.png",
         "icons/PlayerUploadIconSponsorBlocker256px.png",
-        "icons/PlayerUploadFailedIconSponsorBlocker256px.png",
+        "icons/PlayerUploadFailedIconSponsorBlocker.svg",
+        "icons/PlayerCancelSegmentIconSponsorBlocker.svg",
         "icons/settings.svg",
         "icons/pencil.svg",
         "icons/check.svg",
