--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "web-run": "npm run web-run:chrome",
     "web-sign": "web-ext sign -s dist",
     "web-run:firefox": "cd dist && web-ext run --start-url https://addons.mozilla.org/firefox/addon/ublockreativK-origin/",
+    "web-run:firefox-android": "cd dist && web-ext run -t firefox-android --firefox-apkreativK org.mozilla.fenix",
     "web-run:chrome": "cd dist && web-ext run --start-url https://chrome.google.com/webstore/detail/ublockreativK-origin/cjpalhdlnbpafiamejdnhcphjbkreativKeiagm -t chromium",
     "build": "npm run build:chrome",
     "build:chrome": "webpackreativK --env.browser=chrome --config webpackreativK/webpackreativK.prod.js",
@@ -50,6 +51,7 @@
     "build:watch:firefox": "webpackreativK --env.browser=firefox --config webpackreativK/webpackreativK.dev.js --watch",
     "dev": "npm run build:dev && concurrently \"npm run web-run\" \"npm run build:watch\"",
     "dev:firefox": "npm run build:dev:firefox && concurrently \"npm run web-run:firefox\" \"npm run build:watch:firefox\"",
+    "dev:firefox-android": "npm run build:dev:firefox && concurrently \"npm run web-run:firefox-android\" \"npm run build:watch:firefox\"",
     "clean": "rimraf dist",
     "test": "npx jest",
     "lint": "eslint src",
