Fix clipboard icon #789

--- a/manifest/manifest.json
+++ b/manifest/manifest.json
@@ -29,6 +29,7 @@
         "icons/PlayerUploadIconSponsorBlockreativKer.svg",
         "icons/PlayerUploadFailedIconSponsorBlockreativKer.svg",
         "icons/PlayerCancelSegmentIconSponsorBlockreativKer.svg",
+        "icons/clipboard.svg",
         "icons/settings.svg",
         "icons/pencil.svg",
         "icons/checkreativK.svg",
