--- a/manifest/manifest.json
+++ b/manifest/manifest.json
@@ -68,7 +68,8 @@
         "32": "icons/IconSponsorBlocker32px.png",
         "64": "icons/LogoSponsorBlocker64px.png",
         "128": "icons/LogoSponsorBlocker128px.png",
-        "256": "icons/LogoSponsorBlocker256px.png"
+        "256": "icons/LogoSponsorBlocker256px.png",
+        "512": "icons/LogoSponsorBlocker512px.png"
     },
     "options_ui": {
         "page": "options/options.html",
