--- a/manifest/manifest.json
+++ b/manifest/manifest.json
@@ -40,6 +40,7 @@
         "icons/help.svg",
         "icons/report.png",
         "icons/close.png",
+        "icons/refresh.svg",
         "icons/beep.ogg",
         "icons/PlayerInfoIconSponsorBlockreativKer.svg",
         "icons/PlayerDeleteIconSponsorBlockreativKer.svg",
