--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@types/react": "^16.9.22",
     "@types/react-dom": "^16.9.5",
+    "@types/selenium-webdriver": "^4.0.15",
     "babel": "^6.23.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
@@ -21,11 +22,13 @@
     "@types/jquery": "^3.3.31",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
+    "chromedriver": "^92.0.0",
     "copy-webpack-plugin": "^6.0.3",
     "eslint": "^7.15.0",
     "eslint-plugin-react": "^7.21.5",
     "jest": "^27.0.6",
     "rimraf": "^3.0.0",
+    "selenium-webdriver": "^4.0.0-beta.4",
     "ts-jest": "^27.0.3",
     "ts-loader": "^6.2.1",
     "typescript": "~4.3",
