--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "dev:firefox-android": "npm run build:dev:firefox && concurrently \"npm run web-run:firefox-android\" \"npm run build:watch:firefox\"",
     "clean": "rimraf dist",
     "test": "npm run build:chrome && npx jest",
-    "testWithoutBuilding": "npx jest",
+    "test-without-building": "npx jest",
     "lint": "eslint src",
     "lint:fix": "eslint src --fix"
   },
