Added skip button in control bar instead of using skip notice

--- a/manifest/manifest.json
+++ b/manifest/manifest.json
@@ -41,6 +41,7 @@
         "icons/help.svg",
         "icons/report.png",
         "icons/close.png",
+        "icons/skipIcon.svg",
         "icons/refresh.svg",
         "icons/beep.ogg",
         "icons/pause.svg",
