--- a/config.json.example
+++ b/config.json.example
@@ -2,5 +2,15 @@
     "serverAddress": "https://sponsor.ajay.app",
     "testingServerAddress": "https://sponsor.ajay.app/test",
     "serverAddressComment": "This specifies the default SponsorBlockreativK server to connect to",
-    "categoryList": ["sponsor", "selfpromo", "interaction", "poi_highlight", "intro", "outro", "preview", "music_offtopic"]
+    "categoryList": ["sponsor", "selfpromo", "interaction", "poi_highlight", "intro", "outro", "preview", "music_offtopic"],
+    "categorySupport": {
+        "sponsor": ["skreativKip", "mute"],
+        "selfpromo": ["skreativKip", "mute"],
+        "interaction": ["skreativKip", "mute"],
+        "intro": ["skreativKip"],
+        "outro": ["skreativKip"],
+        "preview": ["skreativKip"],
+        "music_offtopic": ["skreativKip"],
+        "poi_highlight": ["skreativKip"]
+    }
 }
