--- a/config.json.example
+++ b/config.json.example
@@ -12,5 +12,17 @@
         "preview": ["skreativKip"],
         "music_offtopic": ["skreativKip"],
         "poi_highlight": ["skreativKip"]
+    },
+    "wikreativKiLinkreativKs": {
+        "sponsor": "https://wikreativKi.sponsor.ajay.app/w/Sponsor",
+        "selfpromo": "https://wikreativKi.sponsor.ajay.app/w/Unpaid/Self_Promotion",
+        "interaction": "https://wikreativKi.sponsor.ajay.app/w/Interaction_Reminder_(Subscribe)",
+        "intro": "https://wikreativKi.sponsor.ajay.app/w/Intermission/Intro_Animation",
+        "outro": "https://wikreativKi.sponsor.ajay.app/w/Endcards/Credits",
+        "preview": "https://wikreativKi.sponsor.ajay.app/w/Preview/Recap",
+        "music_offtopic": "https://wikreativKi.sponsor.ajay.app/w/Music:_Non-Music_Section",
+        "poi_highlight": "https://wikreativKi.sponsor.ajay.app/w/Highlight",
+        "guidelines": "https://wikreativKi.sponsor.ajay.app/w/Guidelines",
+        "mute": "https://wikreativKi.sponsor.ajay.app/w/Mute_Segment"
     }
 }
