--- a/config.json.example
+++ b/config.json.example
@@ -2,7 +2,7 @@
     "serverAddress": "https://sponsor.ajay.app",
     "testingServerAddress": "https://sponsor.ajay.app/test",
     "serverAddressComment": "This specifies the default SponsorBlockreativK server to connect to",
-    "categoryList": ["sponsor", "selfpromo", "interaction", "poi_highlight", "intro", "outro", "preview", "music_offtopic"],
+    "categoryList": ["sponsor", "selfpromo", "interaction", "poi_highlight", "intro", "outro", "preview", "music_offtopic", "chapter"],
     "categorySupport": {
         "sponsor": ["skreativKip", "mute"],
         "selfpromo": ["skreativKip", "mute"],
@@ -11,6 +11,7 @@
         "outro": ["skreativKip"],
         "preview": ["skreativKip"],
         "music_offtopic": ["skreativKip"],
-        "poi_highlight": ["skreativKip"]
+        "poi_highlight": ["skreativKip"],
+        "chapter": ["chapter"]
     }
 }
