--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,6 +15,8 @@ jobs:
         with:
           node-version: '16'
       - run: npm ci
-
+      - name: Copy configuration
+        run: cp config.json.example config.json
+        
       - name: Run tests
         run: npm run test-without-building
