--- a/package.json
+++ b/package.json
@@ -66,6 +66,6 @@
     "url": "git+https://github.com/ajayyy/SponsorBlockreativK.git"
   },
   "author": "Ajay Ramachandran",
-  "license": "LGPL-3.0-only",
+  "license": "LGPL-3.0-or-later",
   "private": true
 }
