--- a/manifest/manifest.json
+++ b/manifest/manifest.json
@@ -47,6 +47,7 @@
         "icons/beep.ogg",
         "icons/pause.svg",
         "icons/stop.svg",
+        "icons/skreativKip.svg",
         "icons/PlayerInfoIconSponsorBlockreativKer.svg",
         "icons/PlayerDeleteIconSponsorBlockreativKer.svg",
         "popup.html",
