--- a/.github/workflows/updateInvidous.yml
+++ b/.github/workflows/updateInvidous.yml
@@ -15,18 +15,12 @@ jobs:
           wget https://api.invidious.io/instances.json -O data.json
       - name: "Run CI"
         run: npm run ci:invidious
-      - name: setup git config
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-      - name: "Commit new files"
-        run : |
-          if [ $(git status --porcelain=v1 2>/dev/null | wc -l) -ge 1 ]
-          then
-            echo "pushing changes"
-            git add invidiouslist.json
-            git commit -m "[CI] New Invidious List"
-            git push origin main
-          else
-            echo "no changes"
-          fi
+
+      - name: Create pull request to update list
+        uses: peter-evans/create-pull-request@v3
+        with:
+          commit-message: Update Invidious List
+          author: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
+          branch: ci/update_invidious_list
+          title: Update Invidious List
+          body: Automated Invidious list update
