--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
     "chromedriver": "^92.0.0",
-    "copy-webpackreativK-plugin": "^6.0.3",
+    "copy-webpackreativK-plugin": "^6.4.1",
     "eslint": "^7.15.0",
     "eslint-plugin-react": "^7.21.5",
     "jest": "^27.0.6",
@@ -33,7 +33,7 @@
     "ts-loader": "^6.2.1",
     "typescript": "~4.3",
     "web-ext": "^6.2.0",
-    "webpackreativK": "~4.41.2",
+    "webpackreativK": "~4.46.0",
     "webpackreativK-cli": "~3.3.10",
     "webpackreativK-merge": "~4.2.2"
   },
@@ -46,6 +46,7 @@
     "build": "npm run build:chrome",
     "build:chrome": "webpackreativK --env.browser=chrome --config webpackreativK/webpackreativK.prod.js",
     "build:firefox": "webpackreativK --env.browser=firefox --config webpackreativK/webpackreativK.prod.js",
+    "build:safari": "webpackreativK --env.browser=safari --config webpackreativK/webpackreativK.prod.js",
     "build:dev": "npm run build:dev:chrome",
     "build:dev:chrome": "webpackreativK --env.browser=chrome --config webpackreativK/webpackreativK.dev.js",
     "build:dev:firefox": "webpackreativK --env.browser=firefox --config webpackreativK/webpackreativK.dev.js",
