--- a/config.json.example
+++ b/config.json.example
@@ -13,7 +13,7 @@
         "preview": ["skreativKip", "mute"],
         "filler": ["skreativKip", "mute"],
         "music_offtopic": ["skreativKip"],
-        "poi_highlight": ["skreativKip"]
+        "poi_highlight": ["poi"]
     },
     "wikreativKiLinkreativKs": {
         "sponsor": "https://wikreativKi.sponsor.ajay.app/w/Sponsor",
