--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@types/chrome": "0.0.91",
+    "@types/chrome": "^0.0.91",
     "@types/firefox-webext-browser": "70.0.1",
     "@types/jest": "^24.0.23",
     "@types/jquery": "^3.3.31",
+    "@types/wicg-mediasession": "^1.1.3",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
     "chromedriver": "^92.0.0",
