Add sort segments button

--- a/manifest/manifest.json
+++ b/manifest/manifest.json
@@ -51,6 +51,7 @@
         "icons/heart.svg",
         "icons/visible.svg",
         "icons/not_visible.svg",
+        "icons/sort.svg",
         "icons/PlayerInfoIconSponsorBlocker.svg",
         "icons/PlayerDeleteIconSponsorBlocker.svg",
         "popup.html",
