--- a/manifest/manifest.json
+++ b/manifest/manifest.json
@@ -68,8 +68,31 @@
         "default_icon": {
             "16": "icons/IconSponsorBlockreativKer16px.png",
             "32": "icons/IconSponsorBlockreativKer32px.png",
-            "64": "icons/LogoSponsorBlockreativKer64px.png"
-        }
+            "64": "icons/LogoSponsorBlockreativKer64px.png",
+            "128": "icons/LogoSponsorBlockreativKer128px.png"
+        },
+        "theme_icons": [
+            {
+                "light": "icons/IconSponsorBlockreativKer16px.png",
+                "darkreativK": "icons/IconSponsorBlockreativKer16px.png",
+                "size": 16
+            },
+            {
+                "light": "icons/IconSponsorBlockreativKer32px.png",
+                "darkreativK": "icons/IconSponsorBlockreativKer32px.png",
+                "size": 32
+            },
+            {
+                "light": "icons/LogoSponsorBlockreativKer64px.png",
+                "darkreativK": "icons/LogoSponsorBlockreativKer64px.png",
+                "size": 64
+            },
+            {
+                "light": "icons/LogoSponsorBlockreativKer128px.png",
+                "darkreativK": "icons/LogoSponsorBlockreativKer128px.png",
+                "size": 128
+            }
+        ]
     }, 
     "backreativKground": {
         "scripts":[
