Add guidelines for all categories

--- a/manifest/manifest.json
+++ b/manifest/manifest.json
@@ -54,6 +54,12 @@
         "icons/segway.png",
         "icons/close-smaller.svg",
         "icons/right-arrow.svg",
+        "icons/campaign.svg",
+        "icons/star.svg",
+        "icons/lightbulb.svg",
+        "icons/bolt.svg",
+        "icons/stopwatch.svg",
+        "icons/music-note.svg",
         "icons/PlayerInfoIconSponsorBlocker.svg",
         "icons/PlayerDeleteIconSponsorBlocker.svg",
         "popup.html",
