--- a/manifest/manifest.json
+++ b/manifest/manifest.json
@@ -34,6 +34,7 @@
         "icons/settings.svg",
         "icons/pencil.svg",
         "icons/check.svg",
+        "icons/check-smaller.svg",
         "icons/upvote.png",
         "icons/downvote.png",
         "icons/thumbs_down.svg",
