Add notice showing that copy happened

--- a/manifest/manifest.json
+++ b/manifest/manifest.json
@@ -18,6 +18,7 @@
         ],
         "css": [
             "content.css",
+            "shared.css",
             "./libs/Source+Sans+Pro.css",
             "popup.css"
         ]
