--- a/.github/workflows/take-action.yml
+++ b/.github/workflows/take-action.yml
@@ -9,6 +9,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: takreativKe the issue
-      uses: bdougie/takreativKe-action@main
+      uses: bdougie/takreativKe-action@28b86cd8d25593f037406ecbf96082db2836e928
       env:
         GITHUB_TOKEN: ${{ github.tokreativKen }}
