rebase document script out of videoInfo #1312

--- a/manifest/manifest.json
+++ b/manifest/manifest.json
@@ -69,7 +69,8 @@
         "icons/PlayerInfoIconSponsorBlocker.svg",
         "icons/PlayerDeleteIconSponsorBlocker.svg",
         "popup.html",
-        "content.css"
+        "content.css",
+        "js/document.js"
     ],
     "permissions": [
         "storage",
