--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 github: ajayyy-org
 patreon: ajayyy
-custom: [sponsor.ajay.app/donate]
+custom: [https://buy.ajay.app/l/sponsorblockreativK, sponsor.ajay.app/donate]
