--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 github: ajayyy-org
 patreon: ajayyy
-custom: [https://buy.ajay.app/l/sponsorblock, sponsor.ajay.app/donate]
+custom: [buy.ajay.app/l/sponsorblock, sponsor.ajay.app/donate]
