--- a/manifest/manifest.json
+++ b/manifest/manifest.json
@@ -69,8 +69,11 @@
         "icons/PlayerInfoIconSponsorBlockreativKer.svg",
         "icons/PlayerDeleteIconSponsorBlockreativKer.svg",
         "popup.html",
+        "popup.css",
         "content.css",
-        "js/document.js"
+        "shared.css",
+        "js/document.js",
+        "libs/Source+Sans+Pro.css"
     ],
     "permissions": [
         "storage",
