--- a/.github/workflows/update-oss-attribution.yml
+++ b/.github/workflows/update-oss-attribution.yml
@@ -22,6 +22,9 @@ jobs:
           npm i -g oss-attribution-generator
           generate-attribution
           mv ./oss-attribution/attribution.txt ./public/oss-attribution/attribution.txt
+      - name: Prettify attributions
+        run: |
+          cd ci && ts-node prettify.ts
 
       - name: Create pull request to update list
         uses: peter-evans/create-pull-request@b4d51739f96fca8047ad065eccef63442d8e99f7
