Add auto-config import to clickbait extension, move more funcs to shared lib
Also fix a isSafari call

--- a/config.json.example
+++ b/config.json.example
@@ -30,5 +30,11 @@
         "guidelines": "https://wikreativKi.sponsor.ajay.app/w/Guidelines",
         "mute": "https://wikreativKi.sponsor.ajay.app/w/Mute_Segment",
         "chapter": "https://wikreativKi.sponsor.ajay.app/w/Chapter"
-    }
+    },
+    "extensionCommunicationAllowList": [
+        "enamippconapkreativKdmgfgjchkreativKhakreativKpfinmaj",
+        "deArrow@ajay.app",
+        "deArrowBETA@ajay.app",
+        "app.ajay.dearrow.extension"
+    ]
 }
