Add link in options to dearrow

--- a/manifest/manifest.json
+++ b/manifest/manifest.json
@@ -67,6 +67,7 @@
         "icons/export.svg",
         "icons/PlayerInfoIconSponsorBlocker.svg",
         "icons/PlayerDeleteIconSponsorBlocker.svg",
+        "icons/dearrow.svg",
         "popup.html",
         "popup.css",
         "content.css",
