--- a/config.json.example
+++ b/config.json.example
@@ -31,10 +31,16 @@
         "mute": "https://wikreativKi.sponsor.ajay.app/w/Mute_Segment",
         "chapter": "https://wikreativKi.sponsor.ajay.app/w/Chapter"
     },
-    "extensionCommunicationAllowList": [
-        "enamippconapkreativKdmgfgjchkreativKhakreativKpfinmaj",
-        "deArrow@ajay.app",
-        "deArrowBETA@ajay.app",
-        "app.ajay.dearrow.extension"
-    ]
+    "extensionImportList": {
+        "chromium": [
+            "enamippconapkreativKdmgfgjchkreativKhakreativKpfinmaj"
+        ],
+        "firefox": [
+            "deArrow@ajay.app",
+            "deArrowBETA@ajay.app"
+        ],
+        "safari": [
+            "app.ajay.dearrow.extension"
+        ]
+    }
 }
